--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,29 +24,29 @@ js-sys = "0.3.77"
 rand = "0.8"
 regex = "1.10"
 
-reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
 tokio = { version = "1.0", features = ["sync", "macros", "io-util", "rt", "time"], default-features = false }
 scraper = "0.20"
 log = { version = "0.4", default-features = false }
 
 # egui = { git = "https://github.com/emilk/egui", default-features = false, features = ["default_fonts"] }
-# eframe = { git = "https://github.com/emilk/egui", default-features = false, features = [
+# eframe = { git = "https://github.com/emilk/egui", default-features = true }
+# egui_extras = { git = "https://github.com/emilk/egui", default-features = false, features = ["image", "svg", "svg_text"] }
+
+egui = { version = "0.32.3", default-features = false, features = ["default_fonts"] }
+eframe = { version = "0.32.3", default-features = true }
+egui_extras = { version = "0.32.3", default-features = false, features = ["image", "svg", "svg_text"] }
+egui-material3 = { version = "0.0.5", default-features = false, features = ["ondemand"] }
+
+# egui = { version = "0.32.2", default-features = false, features = ["default_fonts"] }
+# eframe = { version = "0.32.2", default-features = false, features = [
 #     "default_fonts",
 #     "glow",
 #     # "persistence",
 #     "android-native-activity",
 #     "wgpu",
 # ] }
-# egui_extras = { git = "https://github.com/emilk/egui", default-features = false, features = ["image", "svg", "default", "all_loaders"] }
-egui = { version = "0.32.2", default-features = false, features = ["default_fonts"] }
-eframe = { version = "0.32.2", default-features = false, features = [
-    "default_fonts",
-    "glow",
-    # "persistence",
-    "android-native-activity",
-    "wgpu",
-] }
-egui_extras = { version = "0.32.2", default-features = false, features = ["image", "svg", "default", "all_loaders"] }
+# egui_extras = { version = "0.32.2", default-features = false, features = ["image", "svg", "svg_text"] }
+
 wgpu = { version = "25.0.0", default-features = false }
 
 [profile.release]
