--- a/bingtray/Cargo.toml
+++ b/bingtray/Cargo.toml
@@ -23,7 +23,7 @@ regex = { workspace = true }
 log = { workspace = true }
 directories = "5.0"
 tokio = { workspace = true }
-# reqwest = { workspace = true }
+image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
 scraper = { workspace = true }
 webbrowser = { version = "1.0.5", default-features = false }
 ureq = { version = "2.9", features = ["json"] }
@@ -32,12 +32,10 @@ ureq = { version = "2.9", features = ["json"] }
 egui = { workspace = true }
 eframe = { workspace = true, default-features = false }
 egui_extras = { workspace = true }
+egui-material3 = { workspace = true }
+
 getrandom = { version = "0.3", features = ["wasm_js"] }
 wgpu = { workspace = true, default-features = false }
-ehttp = "0.5"
-poll-promise = "0.3"
-image = { version = "0.25", features = ["jpeg", "png"] }
-egui-material3 = "0.0.4"
 
 diesel = { version = "2.1.0", features = ["sqlite"] }
 
