--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -175,19 +175,19 @@ jobs:
           path: target/release${{ contains(matrix.platform.target, 'windows') && '-with-symbols' || '' }}/bingtray*
           retention-days: 1
       
-      - name: All except Android, Build snap packages
-        if: (contains(matrix.platform.target, 'x86_64') || contains(matrix.platform.target, 'aarch64') || contains(matrix.platform.target, 'armv7')) && !contains(matrix.platform.name, 'Android APK arm64')
-        uses: snapcore/action-build@v1
-        id: build
+      # - name: All except Android, Build snap packages
+      #   if: (contains(matrix.platform.target, 'x86_64') || contains(matrix.platform.target, 'aarch64') || contains(matrix.platform.target, 'armv7')) && !contains(matrix.platform.name, 'Android APK arm64')
+      #   uses: snapcore/action-build@v1
+      #   id: build
       
-      - name: All except Android, Publish snap to store
-        if: (contains(matrix.platform.target, 'x86_64') || contains(matrix.platform.target, 'aarch64') || contains(matrix.platform.target, 'armv7')) && !contains(matrix.platform.name, 'Android APK arm64')
-        uses: snapcore/action-publish@v1
-        env:
-          SNAPCRAFT_STORE_CREDENTIALS: ${{ secrets.SNAPSTORE_LOGIN }}
-        with:
-          snap: ${{ steps.build.outputs.snap }}
-          release: edge
+      # - name: All except Android, Publish snap to store
+      #   if: (contains(matrix.platform.target, 'x86_64') || contains(matrix.platform.target, 'aarch64') || contains(matrix.platform.target, 'armv7')) && !contains(matrix.platform.name, 'Android APK arm64')
+      #   uses: snapcore/action-publish@v1
+      #   env:
+      #     SNAPCRAFT_STORE_CREDENTIALS: ${{ secrets.SNAPSTORE_LOGIN }}
+      #   with:
+      #     snap: ${{ steps.build.outputs.snap }}
+      #     release: edge
 
       - name: Android, Store artifact Android release arm64 apk
         if: (contains(matrix.platform.name, 'Android APK arm64'))
